overflow fixed

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -52,6 +52,7 @@ nav {
     align-items: center;
     width: 100%;
     min-height: 60px;
+    overflow: hidden;
 }
 
 nav ul {
